net80211: restore 'iflladdr_event' event handler.

Now 'ether' argument to ifconfig can be used as an alias to 'wlanaddr'.

PR:		208933


git-svn-id: svn+ssh://svn.freebsd.org/base/head@299171 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f